# django-react-boilerplate

./: .babelrc  .bandit  .biomeignore  .bootstraprc  .coveragerc  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .prettierrc.json  .prospector.yaml  .swcrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.TXT  LICENSE.txt  Makefile  Pipfile  Procfile  README.md  app.json  babel.config.js  babel.config.json  biome.json  circle.yml  dev-requirements.in  docker-compose.yml  eslint.config.mjs  index.html  jest-setup.js  jest.config.js  (+22 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  main.yml  nightly.yml
.github/workflows/shared-build/: action.yml
assets/js/: bootstrap-includes.js  index.js
assets/js/app/example-app/: index.js
assets/js/app/example-app/components/ColorChanger/: ColorChanger.js  index.js  style.scss
assets/js/app/example-app/components/ColorChanger/__tests__/: ColorChanger.snaps.spec.js
assets/js/app/example-app/components/ColorChanger/__tests__/__snapshots__/: ColorChanger.snaps.spec.js.snap
assets/js/app/example-app/components/ColorDisplay/: ColorDisplay.js  index.js  style.scss
assets/js/app/example-app/components/ColorDisplay/__mocks__/: ColorDisplay.js
assets/js/app/example-app/components/ColorDisplay/__tests__/: ColorDisplay.snaps.spec.js
assets/js/app/example-app/components/ColorDisplay/__tests__/__snapshots__/: ColorDisplay.snaps.spec.js.snap
assets/js/components/: HomePageReactTitle.js
assets/js/containers/: HomePageContainer.js
assets/js/pages/: Home.js  homePage.js
assets/js/utils/: index.js  urls.js
assets/sass/: _variables.scss  style.scss
assets/sass/components/: _all.scss
assets/sass/helpers/: _all.scss
backend/: .env.example  Dockerfile  manage.py  schema.yml
backend/common/: context_processors.py  models.py  routes.py  serializers.py  tests.py  urls.py  views.py
backend/common/management/commands/: celery.py  has_missing_migrations.py
backend/common/utils/: tests.py
backend/exampleapp/: admin.py  apps.py  models.py  routes.py  urls.py  views.py
backend/exampleapp/tests/: test_models.py  test_views.py
backend/project_name/: __init__.py  celery.py  celerybeat_schedule.py  urls.py  wsgi.py
backend/project_name/settings/: base.py  local.py.example  local_base.py  production.py  test.py
backend/templates/: base.html
backend/templates/common/: index.html
backend/templates/defender/: lockout.html
backend/templates/exampleapp/: detail.html  index.html  results.html
backend/templates/includes/: sentry_init.html
backend/users/: admin.py  managers.py  models.py  routes.py  serializers.py  tasks.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: test_views.py
backend/vite_loader/templatetags/: vite_loader_tags.py
backend/{{project_name}}/: celery.py
common/management/commands/: celery.py
common/utils/: tests.py
docs/product_requirements/: upgrade-ty-and-packages.md
exampleapp/: admin.py  apps.py  models.py
frontend/: Dockerfile
frontend/assets/images/: index.d.ts
frontend/css/: style.css  users.css
frontend/js/: App.js  App.tsx  bootstrap-includes.js  index.js  index.tsx  jquery-index.js
frontend/js/api/: index.ts  schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/js/api/core/: OpenAPI.ts  request.ts
frontend/js/app/example-app/: index.js
frontend/js/app/example-app/components/ColorChanger/: ColorChanger.js
frontend/js/app/example-app/components/ColorChanger/ColorDisplay/: ColorDisplay.js
frontend/js/app/example-app/components/ColorChanger/__tests__/: ColorChanger.snaps.spec.js  ColorChanger.spec.js
frontend/js/app/example-app/components/ColorChanger/__tests__/__snapshots__/: ColorChanger.snaps.spec.js.snap
frontend/js/app/example-app/components/ColorDisplay/: ColorDisplay.js
frontend/js/app/example-app/components/ColorDisplay/__tests__/: ColorDisplay.snaps.spec.js
frontend/js/components/: TopNav.tsx  index.ts
frontend/js/loaders/: users.ts
frontend/js/pages/: Home.js  Home.tsx  Users.tsx  homePage.js
frontend/js/pages/__tests__/: Home.spec.js  Home.spec.tsx
frontend/js/routes/: index.ts
frontend/js/store/: api.js  api.ts  index.js  index.ts  reducers.js  reducers.ts  rest_check.js  rest_check.ts
frontend/js/types/: assets.d.ts  index.d.ts
frontend/js/utils/: SentryBoundary.js  index.js  index.ts  navigation.ts  urls.ts
frontend/sass/: style.scss
frontend/sass/pages/: _all.scss
github/workflows/: main.yml
project_name/: celery.py  urls.py  wsgi.py
project_name/settings/: base.py  local.py.example  local_base.py  production.py  test.py
templates/: base.html
templates/exampleapp/: itworks.html
users/: models.py  tasks.py  views.py
